Revert clamp changes to fix crash